--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: Build redocly static page
       run: |
-        makedir build
+        mkdir build
         npx @redocly/cli build-docs openapi/openapi.yaml -o build/index.html
 
     - name: Upload build artifacts
