Fixed missing file on api call

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
         --header 'Authorization: ${{ secrets.API_KEY }}' \
         --header 'content-type: multipart/form-data' \
         --form pathname=/nekoapi \
-        --form files=@build/index.html
+        --form files=@build/index.html \
         --form files=@build/favicon.ico
