--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Deploy to Nekoweb
 
 on:
   push:
@@ -6,45 +6,22 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Build redocly static page
-      run: |
-        mkdir build
-        npx @redocly/cli build-docs openapi/openapi.yaml -o build/index.html
-        cp docs/favicon.ico build/favicon.ico
-
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: build
-        path: ./build
-
   deploy:
-    needs: build
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Download build artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: build
-        path: ./build
+      - name: Prepare build
+        run: |
+          mkdir -p ./build
+          cp -r ./public/* ./build
 
-    - name: Deploy with Nekoweb API (curl)
-      run: |
-        curl --request POST \
-        --url https://nekoweb.org/api/files/upload \
-        --header 'Authorization: ${{ secrets.API_KEY }}' \
-        --header 'content-type: multipart/form-data' \
-        --form pathname=/nekoapi \
-        --form files=@build/index.html \
-        --form files=@build/favicon.ico
+      - name: Deploy to Nekoweb
+        uses: mp-pinheiro/nekoweb-deploy@0.0.1
+        with:
+          API_KEY: ${{ secrets.NEKOWEB_API_KEY }}
+          BUILD_DIR: './build'
+          DEPLOY_DIR: '/'
+          CLEANUP: 'False'
