--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           path: ./build
 
       - name: Deploy to Nekoweb
-        uses: mp-pinheiro/nekoweb-deploy@dev
+        uses: mp-pinheiro/nekoweb-deploy@test
         with:
           API_KEY: ${{ secrets.API_KEY }}
           BUILD_DIR: './build'
